--- a/linux-3.18.47/arch/arm/mach-s3c24xx/Makefile
+++ b/linux-3.18.47/arch/arm/mach-s3c24xx/Makefile
@@ -76,6 +76,7 @@ obj-$(CONFIG_MACH_S3C2416_DT)		+= mach-s3c2416-dt.o
 obj-$(CONFIG_MACH_ANUBIS)		+= mach-anubis.o
 obj-$(CONFIG_MACH_AT2440EVB)		+= mach-at2440evb.o
 obj-$(CONFIG_MACH_MINI2440)		+= mach-mini2440.o
+obj-$(CONFIG_MACH_MINI2440_DT)		+= mach-mini2440-dt.o
 obj-$(CONFIG_MACH_NEXCODER_2440)	+= mach-nexcoder.o
 obj-$(CONFIG_MACH_OSIRIS)		+= mach-osiris.o
 obj-$(CONFIG_MACH_RX3715)		+= mach-rx3715.o
